{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "3957f7c6-5da8-4926-97c0-ede4ac0df16a",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "PassThrough",
                    "id": "a3a1fffd-6838-43e7-91de-90d9554b37ba",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StandardThrust",
                    "type": "Button",
                    "id": "83a6fa64-1065-43c1-a7b6-df8ee6a58317",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AugmentationThrust",
                    "type": "Button",
                    "id": "b61fc9eb-d485-4714-b323-ec614d15dc73",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MainAttack",
                    "type": "Button",
                    "id": "c618bb4e-bd9b-41d2-b877-c7a0a13ddd63",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Aim",
                    "type": "Button",
                    "id": "b963423d-8484-4173-bfae-15e8c4d29a86",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseDeltaPosition",
                    "type": "PassThrough",
                    "id": "c3dd0ce2-cd3a-485d-9c64-e3e3760c64a4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchToWeaponUp",
                    "type": "Button",
                    "id": "61ed1d76-7e0a-44f1-980f-09dd2990c63e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchToWeaponDown",
                    "type": "Button",
                    "id": "1c8b1401-8a55-4d18-a67d-d3d942a5ae93",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchToWeaponLeft",
                    "type": "Button",
                    "id": "90c1e225-986e-4d48-bf21-c7b023e88150",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchToWeaponRight",
                    "type": "Button",
                    "id": "ddf0cd15-5311-4c45-b5b3-a36210f55ca7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a3225723-167c-41ab-ba30-15962a09dc5b",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a20f161-f64d-48ca-9356-d8da1910f9f4",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StandardThrust",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e5ee0f6-1890-4f86-9442-ebee051ff3a5",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AugmentationThrust",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a39412a-5cb0-48b5-8daa-a50bbd979788",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1334c09f-6a5f-4d09-bcb5-4fab4bfd04be",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0bb5a347-6b12-4081-8d46-b2102452adb6",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDeltaPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "593e46ef-5d39-4262-ab6a-14085a99060c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchToWeaponUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b439f54-6b24-47ba-bd84-15bcbf08b98f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchToWeaponDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7129ef0b-75a6-4266-8bf2-7497eea62daa",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchToWeaponLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24dd55b4-7305-4726-b98d-fede1a189885",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchToWeaponRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}